# COT_Freight_Optimization_Tool

./: .dockerignore  .gitignore  AGENTS.md  APP_STATE.md  APP_VISUAL_SUMMARY_FOR_CLAUDE.md  Amanda_Freight_File_v1.csv  CODE_REVIEW.md  COT Load Utilization Framework (v1 12.23.25).docx  Dockerfile  ITERATION_1_PRD.md  LOAD_OPTIMIZER_REDESIGN_PRD.md  Master Load Building Cheat Sheet (01.22.25).xlsx  PILOT_READY_PRD.md  README.md  STATUS_FOR_CLAUDE.md  app.py  db.py  pyproject.toml  render.yaml  requirements.txt  server.err  trailer_shapes.html
.tmp/: bigtex_cheatsheet_diff_details.json  bigtex_cheatsheet_diff_summary.json  bigtex_home.html  bigtex_review_diff_details.json  bigtex_review_diff_summary.json  bigtex_review_trends_dbcat.json  dump_test_output.txt  manual_add_route_smoke.db-shm  manual_add_route_smoke.db-wal  pj_home.html  pj_session_8a18.html  pj_session_8a18_after.html  pj_session_8a18_after2.html  prograde_load_builder_runtime.js  prograde_visual_report.txt  prograde_visual_report_after.txt  reopt_bench_fast.db-shm  reopt_bench_fast.db-wal  reopt_status_route_smoke.db-shm  reopt_status_route_smoke.db-wal  run_app_dev.cmd  run_local_app.py  stacking_guide_master.xlsx
_prograde_incoming/: prograde_load_builder_PRD_v03.md
blueprints/: README.md  __init__.py
cot_utilization/: __init__.py  scorer.py  stack_calculator.py
data/: README.md
docs/: ARCHITECTURE_STANDARDS_GAP_ASSESSMENT_2026-05-06.md  ATW_HOSTING_OPERATIONAL_REQUIREMENTS.md  ATW_HOSTING_OPERATIONAL_REQUIREMENTS.rtf  ATW_HOSTING_OPERATIONAL_REQUIREMENTS_v2.rtf  AZURE_HOSTING_REQUEST.md  (+8 more)
(+318 files in other folders)
