[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "cot-utilization"
version = "0.1.0"
description = "Standalone trailer utilization scorer for COT freight loads"
requires-python = ">=3.10"
dependencies = ["pandas>=1.5"]

[tool.setuptools.packages.find]
include = ["cot_utilization*"]
